--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Lunch Checker</title>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
   <script src="https://code.angularjs.org/1.4.5/angular-route.js"></script>
-  <script rel="javascript" href="app.js"></script>
+  <script rel="text/javascript" src="https://abhishek-orion.github.io/Cousera-SinglePageWebAppsAngularJS/app.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles/bootstrap.min.css">
     <style>
