--- a/assignment2-starter-code/index.html
+++ b/assignment2-starter-code/index.html
@@ -3,9 +3,9 @@
   <head>
     <title>Shopping List Check Off</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script type="text/javascript" src = "file:///Users/abhishek/fullstack-course5/assignments/assignment2/assignment2-starter-code/angular.min.js"></script>
-    <script type="text/javascript" src = "file:///Users/abhishek/fullstack-course5/assignments/assignment2/assignment2-starter-code/app.js"></script>
-    <link rel="stylesheet" href="file:///Users/abhishek/fullstack-course5/assignments/assignment2/assignment2-starter-code/styles/bootstrap.min.css">
+    <script type="text/javascript" src = "angular.min.js"></script>
+    <script type="text/javascript" src = "app.js"></script>
+    <link rel="stylesheet" href="styles/bootstrap.min.css">
     <style>
       .emptyMessage {
         font-weight: bold;
